k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8080        # Service port
      targetPort: 8080  # Container port
      protocol: TCP
      nodePort: 30080   # Optional fixed NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  type: NodePort
  selector:
    app: web2
  ports:
    - port: 8080        # Service port
      targetPort: 8080  # Container port
      protocol: TCP
      nodePort: 30081   # Optional fixed NodePort
